2009-02-05  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/keymaps.jl
	* KEYBINDINGS: move tab-raising bindings from global to window keymap

	* po/POTFILES.in: updated for tab files

2009-02-04  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/keymaps.jl: remove tab-keymap, add grouping to Button2-Off on titlebar

	* KEYBINDINGS: complete list of default keybindings

	* OPTIONS: added new options coming from tabs

	* sawfish.spec.in: add KEYBINDINGS to %doc

	* sawfish.ebuild.in: add KEYBINDINGS README.IMPORTANT to %doc

	* README.IMPORTANT: changed syntax

2009-02-03  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: - re-add checks for XFree86 (add --without-xorg-x11r7 flag)
                        - fixed a typo

	* README.IMPORTANT: updated

	* install-sh: added for libtool < 2.2

	* librep.spec.in: don't call make-pot (deprecated)
	                  don't %doc deprecated files

	* lisp/sawfish/wm/keymaps.jl: - merged tab-keymap.jl
	                              - add keymap for tabs (tab-keymap)

	* lisp/sawfish/wm/tabs/tab.jl
	* lisp/sawfish/wm/tabs/tabgroup.jl
	* lisp/sawfish/wm/tabs/marks.jl: Merged tab-system [Yann Hodique, Scott Scriven, Nathan Froyd, Christopher Bratusek]

	* lisp/Makefile.in: install tabbing code

	* po/Makefile.in.in: remove file, add symlink instead (fixes issue with older intltool)

	* autogen.sh: remove --copy flag from intltoolize

2009-02-02  Christopher Bratusek <zanghar@freenet.de>
	* Makefile.in: create $DESTDIR$datadir/applications before 
	               installing desktop file into it

	* */Makefile.in: add distclean rule to all subdir Makefiles

	* autogen.sh: - make sure we check if intltoolize successfully exited
		      - make sure we don't use bash-specific syntax [Mark Diekhans]
		      - don't -I /usr/share/aclocal/ [Mark Diekhans]

	* configure.in: print usefull stuff at the end of configure

2009-02-01  Christopher Bratusek <zanghar@freenet.de>