@@ -50,6 +50,8 @@ they occurred between. For more detailed information see the
 @item Warp cursor to unmaximied windows, if warp-cursor is enabled [Fernando Carmona Varo]
 
 @item 3 New Window-Animators: cross, elliptical and draft [Christopher Bratusek]
+
+@item Shrinking/Yanking Support [Timo Korvola]
 @end itemize
 
 @item Other changes:
@@ -92,9 +94,13 @@ they occurred between. For more detailed information see the
 
 @item Intltoolize Sawfish [Christopher Bratusek]
 
-@item print usefull stuff at the end of configure [Christopher Bratusek]
+@item Print usefull stuff at the end of configure [Christopher Bratusek]
 
-@item add distclean rule to all Makefiles [Christopher Bratusek]
+@item Add distclean rule to all Makefiles [Christopher Bratusek]
+
+@item Add KEYBINDINGS file, containing a list of all default keybindings [Christopher Bratusek]
+
+@item Updated OPTIONS for all new options [Christopher Bratusek]
 @end itemize
 @end itemize
 
