@@ -2,7 +2,15 @@
 	* lisp/sawfish/wm/keymaps.jl
 	* KEYBINDINGS: move tab-raising bindings from global to window keymap
 
-	* po/POTFILES.in: updated for tab files
+	* po/POTFILES.in: updated for tab and shrink/yank files
+
+	* OPTIONS: updated
+
+	* man/news.texi: updated
+
+	* lisp/sawfish/wm/commands/shrink-yank.jl: Shrinking/Yanking Support [Timo Korvola]
+
+	* configure.in: bump minimum intltool version to 0.40.0
 
 2009-02-04  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/keymaps.jl: remove tab-keymap, add grouping to Button2-Off on titlebar
